--- a/ci/posttest.yml
+++ b/ci/posttest.yml
@@ -8,6 +8,11 @@ core unix coverage posttest:
     - core u2f test
     - core fido2 test
   script:
+    - nix-shell --run "ls -al"
+    - nix-shell --run "echo ...."
+    - nix-shell --run "ls -al core"
+    - nix-shell --run "echo ........"
+    - nix-shell --run "ls -al core/src"
     - nix-shell --run "pipenv run make -C core res"  # we need to regenerate resources.py
     - nix-shell --run "pipenv run make -C core coverage"
   coverage: '/>\d+%</'
